# PairPotMCinator

./: CMakeLists.txt  README.md  reference.md
results/Adamantyl_on_Tl/adam_DTDPP/: params_deform.json  params_deform_bind.json  params_deformed_mol.json  params_no_deform.json
results/Adamantyl_on_Tl/adam_QA_10/: params_deform.json  params_no_deform.json
results/Adamantyl_on_Tl/adam_QA_9/: params_deform.json  params_no_deform.json
results/BTDPP_experiment/: BTDPP.json  BTDPP_deform.json  DPP_5x2.json  DTDPP_5x2.json  data_BTDPP-10_on_Tl.json  data_BTDPP-11_on_Tl.json  data_bi_list_5_2.json  data_bi_list_5_2_original.json
results/BTDPP_experiment/xyz_files/: bithienyl_list_5_2.xyz  bithienyl_list_original.xyz  cell_Tl_slab_2.xyz  list_BTDPP-10.xyz  list_BTDPP-11.xyz
results/DPP_on_graphene/: README.md  config_DPDPP_1x1.json  config_DPDPP_1x2.json  config_DPDPP_1x3.json  config_DTDPP_1x1.json  config_DTDPP_1x2.json  config_DTDPP_1x3.json
results/DPP_on_graphene/supplementary/: README.md  combine_energies.py  combine_trajectories.py  combined_ens.txt  config_DTDPP_1x3.json  divide_in_groups.py  extract_info.py  get_ens_for_latex.py  plot_energies.py  reconstruct_cycle_min_en_info.py  supplementary.md
results/DPP_on_graphene/xyz_files/: DPDPP.xyz  cell.xyz  (+1 more)
results/artificial/: config_bind.json  config_deform.json  config_mol_list.json  config_molecule_list.json  config_molecules.json  config_param_groups.json  config_params_groups.json  config_simple.json
src/: CMakeLists.txt  PairPotMCinator.cpp  buckingham_pot_data.h  energy.h  finder.h  objects.h  utility.h
(+177 files in other folders)
